--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 # OpenGym - Your best tool to menage your GYM
 ## Built with Ionic - React
+Link to Figma: https://www.figma.com/file/3pebDmor5Z697n1IpySU8E/OpenGym
