--- a/README
+++ b/README
@@ -1,3 +1,7 @@
 # OpenGym - Your best tool to menage your GYM
 ## Built with Ionic - React
 Link to Figma: https://www.figma.com/file/3pebDmor5Z697n1IpySU8E/OpenGym
+
+## To run:
+ step 1: yarn
+ step 2: ionic serve
