various fixes and started documenting how to create a new webapi in dotnet7 from the wsl

--- a/README
+++ b/README
@@ -9,3 +9,8 @@ Link to Figma: https://www.figma.com/file/3pebDmor5Z697n1IpySU8E/OpenGym
  step 1: yarn
  step 2: ionic serve
 
+## To create a new BE service:
+- cd into Backend
+- mkdir newService and cd into it
+- eg. in Catalog: dotnet new webapi -o Catalog.API 
+- https://learn.microsoft.com/en-us/azure/active-directory-b2c/enable-authentication-web-api?tabs=csharpclient
